--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "verumconsilium/laravel-browsershot": "^1.3"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.9",
         "fakerphp/faker": "^1.9.1",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.0.1",
