--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dependencies": {
         "@nesk/puphpeteer": "^2.0.0",
         "puppeteer": "^19.4.1",
+        "sweetalert2": "^11.10.0",
         "typeahead": "^0.2.2"
     }
 }
